--- a/docs/_posts/2017-12-11-admin.md
+++ b/docs/_posts/2017-12-11-admin.md
@@ -7,6 +7,6 @@ category: Docs
 excerpt: Admin usage
 ---
 
-![add user](resources/img/adduser.png)
+![add user]({{site.images}}/adduser.png)
 
-![remove user](resources/img/removeuser.png)
+![remove user]({{site.images}}/removeuser.png)
