--- a/docs/_posts/2017-12-11-setup.md
+++ b/docs/_posts/2017-12-11-setup.md
@@ -7,4 +7,4 @@ category: Docs
 excerpt: Selecting the program to run and renaming links
 ---
 
-![Admin Screen](resources/img/programsetup.png)
+![Admin Screen]({{site.images}}/programsetup.png)
