--- a/docs/_posts/2017-12-16-admin.md
+++ b/docs/_posts/2017-12-16-admin.md
@@ -7,6 +7,16 @@ category: Docs
 excerpt: Admin usage
 ---
 
+To access the Admin Menu log in using the admin account with default password of "Password".
+
+In the Admin Menu:
+
+* Add User - Allows a user to be added with a required user name, password, adviser, and email.
+
+* Remove user - Allows the Admin to remove a user
+
+* Prog Setup - Allows the program to be run to be selected and for shortcuts to be changes. - Please see: [Program Setup]({{site.baseurl}}/docs/setup)
+
 ![add user]({{site.images}}/adduser.png)
 
 ![remove user]({{site.images}}/removeuser.png)
